force-app/main/default/objects/Account/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <label>Branch</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>