force-app/main/default/objects/Account/fields/Innovation_Velocity__c.field-meta.xml
<CustomField>
    <fullName>Innovation_Velocity__c</fullName>
    <label>Innovation Velocity</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>