force-app/main/default/objects/Account/fields/NB__c.field-meta.xml
<CustomField>
    <fullName>NB__c</fullName>
    <label>NB</label>
    <length>10</length>
    <type>Text</type>
</CustomField>